default/objects/BizMachine_Settings__c/BizMachine_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to specify API key and endpoints used in communication between Salesforce and BizMachine.</description>
    <label>BizMachine Settings</label>
</CustomObject>