default/objects/BizMachine_Settings__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <label>API Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>