default/objects/BizMachine_Settings__c/fields/Production_Dataset__c.field-meta.xml
<CustomField>
    <fullName>Production_Dataset__c</fullName>
    <label>Production Dataset</label>
    <length>10</length>
    <type>Text</type>
</CustomField>