default/objects/BizMachine_Settings__c/fields/Sandbox_Dataset__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Dataset__c</fullName>
    <label>Sandbox Dataset</label>
    <length>10</length>
    <type>Text</type>
</CustomField>