default/objects/BizMachine_Settings__c/fields/Sandbox_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Endpoint__c</fullName>
    <label>Sandbox Endpoint</label>
    <type>Url</type>
</CustomField>