default/objects/BizMachine_Settings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>API_Key__c</columns>
    <columns>Production_Dataset__c</columns>
    <columns>Production_Endpoint__c</columns>
    <columns>Sandbox_Dataset__c</columns>
    <columns>Sandbox_Endpoint__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>